--- a/app/src/main/res/layout/finished_users_fragment.xml
+++ b/app/src/main/res/layout/finished_users_fragment.xml
@@ -28,6 +28,15 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <include
+            android:id="@+id/layout_progress_bar_finished_users"
+            layout="@layout/progress_bar_layout"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:id="@+id/empty_finished_users_list"
             style="@style/TextAppearance.MaterialComponents.Headline5"
