--- a/app/src/main/res/layout/fragment_classroom.xml
+++ b/app/src/main/res/layout/fragment_classroom.xml
@@ -17,7 +17,7 @@
         tools:context=".views.ClassroomFragment">
 
         <include
-            android:id="@+id/layout_progress_bar"
+            android:id="@+id/layout_progress_bar_classroom"
             layout="@layout/progress_bar_layout"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -28,7 +28,6 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/classroom_list"
             android:layout_width="0dp"
-            android:visibility="gone"
             android:layout_height="0dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
